# 16_18_CPP_Piotr_Chaberka_Gigathon_2025

./: LICENSE  README.md
16_18_CPP_Piotr_Chaberka/: 16_18_CPP_Piotr_Chaberka.cpp  CMakeLists.txt  pch.cbp  pch.depend  pch.layout  readme.md  wyniki_solitaire.txt
16_18_CPP_Piotr_Chaberka/Pliki_Kompilacji_i_Projektu/: CMakeCache.txt  Makefile  cmake_install.cmake  pch.layout
